# permutation_operations

./: 4_perms_cylic.txt  Cargo.toml  CodeCogsEqn.gifZone.Identifier  build.rs  bung.txt  crunk.txt  funk.txt  funk2.txt  int_matrix_1.pngZone.Identifier  int_matrix_2.pngZone.Identifier  perm_identity.pngZone.Identifier  perm_inverse4.pngZone.Identifier  perm_inverse5.pngZone.Identifier  perm_inverse_1.gifZone.Identifier  perm_inverse_2.gifZone.Identifier  perm_inverse_3.pngZone.Identifier  perm_inverse_6.pngZone.Identifier  perm_inverse_7.pngZone.Identifier  perm_matrix_1.pngZone.Identifier  perm_matrix_2.pngZone.Identifier  perm_matrix_3.pngZone.Identifier  perm_matrix_4.pngZone.Identifier  perm_matrix_5.pngZone.Identifier  perm_prod_1.gifZone.Identifier  perm_prod_2.gifZone.Identifier  perms_order_3.pngZone.Identifier  perms_order_3_.pngZone.Identifier  permutation_list_filter_latex_out.tex  permutation_list_latex.tex  readme.md  test_permutation_list_filter_off_diagonal.tex  texout  texout.c  texout.tex
src/: int_matrix_1.rs  int_matrix_2.rs  perm1.rs  perm2.rs  perm3.rs  perm4.rs  perm_inverse.rs  perm_matrix_1.rs  perm_prod.rs  perms_set_1.rs
src/perm_ops/: GroupItem.rs  finte_group.rs  int_matrix.rs  main.rs  pdf_methods.rs  permutation.rs  permutation_list.rs
src/perm_ops/cfiles/: createpdf.c  createpdf.h
