[package]
name = "permutation_operations"
version = "0.1.0"
authors = ["brad"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "perm1"   
path = "src/perm1.rs"   
[[bin]]
name = "perm2"   
path = "src/perm2.rs"
[[bin]]
name = "perm3"   
path = "src/perm3.rs"
[[bin]]
name = "perm_prod"   
path = "src/perm_prod.rs"
[[bin]]
name = "perm_inverse"   
path = "src/perm_inverse.rs"
[[bin]]
name = "int_matrix_1"   
path = "src/int_matrix_1.rs"
[[bin]]
name = "perm_matrix_1"   
path = "src/perm_matrix_1.rs"


[dependencies]
